--- a/MapTour/src/app/storymaps/maptour/ui/mobile/InfoView.css
+++ b/MapTour/src/app/storymaps/maptour/ui/mobile/InfoView.css
@@ -8,7 +8,7 @@
 	text-align:center;
 	overflow:auto;
 	height: 100%;
-	min-height: 100%;
+	/*min-height: 100%;*/
 	-ms-touch-action: none;
 }
 
@@ -50,4 +50,5 @@
 
 .tourPoint {
 	overflow: auto;
+	height: 100%;
 }
